--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "models"]
-	path = models
-	url = https://github.com/tensorflow/models.git
+[submodule "detector_receiver/models"]
+	path = detector_receiver/models
+	url = https://github.com/tensorflow/models
