--- a/camera_sender/Pipfile
+++ b/camera_sender/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 vidgear = "==0.1.8"
 numpy = "==1.19.5"
 opencv-contrib-python = "==4.5.1.48"
+toml = "*"
 
 [dev-packages]
 
+[requires]
+python_version = "3.9.1"
